fix navbar covering the content of page

--- a/styles/style.css
+++ b/styles/style.css
@@ -91,6 +91,10 @@ body {
   border-color: transparent;
 }
 
+.content {
+  margin-bottom: 100px;
+}
+
 /* footer {
   position: fixed;
   bottom: 0;
